# ics-agent

./: .env.example  .gitignore  Makefile  README.md  fix.py  main.py  patch2.py  plan.md  pyproject.toml
assignments/data_redaction/: README.md  eval.json  service.py
assignments/data_redaction/tools/: README.md  read_ticket.py  submit_redacted_ticket.py  (+1 more)
assignments/ephemeral_dispatch/: README.md  eval.json  service.py
assignments/patch_review/: README.md  eval.json  service.py
benchmark_data/: log_1.txt  log_10.txt  log_11.txt  log_12.txt  log_13.txt  log_14.txt  log_15.txt  log_16.txt  log_17.txt  log_18.txt  log_19.txt  log_2.txt  log_20.txt  log_3.txt  log_4.txt  log_5.txt  log_6.txt  log_7.txt  log_8.txt  log_9.txt
docs/: eval-guide.md  memory-architecture.md  skill-design.md  troubleshooting.md
evals/: bash_workspace.json  edit_file_replace.json  list_files_nested.json  memory_persistent_recall.json  memory_persistent_update.json  read_file_efficiency.json
ics_agent_lab/: __init__.py  cli.py
ics_agent_lab/core/: __init__.py  agent.py  protocol.py  trace.py
ics_agent_lab/llm/: __init__.py  base.py  openrouter.py
ics_agent_lab/memory/: __init__.py  loader.py
ics_agent_lab/runtime/: __init__.py  builder.py  config.py  runtime.py
ics_agent_lab/skills/: __init__.py  loader.py
ics_agent_lab/tools/: __init__.py  ask_subagent.py  base.py  bash.py  builder.py  edit_file.py  list_files.py  load_skill.py  read_file.py  read_memory.py  save_memory.py  write_file.py
lab_eval/: __init__.py  cli.py  metrics.py  runner.py  scenario.py  suite.py
(+9 files in other folders)
